--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "uvloop>=0.19.0",
     "httptools>=0.6.1",
     "uuid>=1.30",
+    "uuid6>=2024.1.12",
     "alembic>=1.13.1",
     "asyncpg>=0.29.0",
     "SQLAlchemy-Utils>=0.41.1",
