--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,11 @@ dependencies = [
     "gunicorn>=23.0.0",
     "ruff>=0.11.13",
     "mypy>=1.16.0",
+    "requests>=2.31.0",
+    "beautifulsoup4>=4.12.0",
+    "uv (>=0.8.22,<0.9.0)",
+    "playwright (>=1.55.0,<2.0.0)",
+    "bs4 (>=0.0.2,<0.0.3)",
 ]
 
 [project.optional-dependencies]
