--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "uuid6>=2024.1.12",
     "alembic>=1.13.1",
     "asyncpg>=0.29.0",
+    "pillow>=10.0.0",
     "SQLAlchemy-Utils>=0.41.1",
     "python-jose>=3.3.0",
     "SQLAlchemy>=2.0.25",
@@ -34,6 +35,14 @@ dependencies = [
     "ruff>=0.11.13",
     "mypy>=1.16.0",
     "requests>=2.31.0",
+    "pymupdf>=1.23.0",
+    "pytesseract>=0.3.10",
+    "unstructured[local-inference]>=0.14.9",
+    "llama-index>=0.11.0,<0.12.0",
+    "llama-index-retrievers-bm25>=0.1.0",
+    "llama-index-embeddings-together>=0.1.0",
+    "llama-index-llms-together>=0.1.0",
+    "together>=1.2.0",
     "beautifulsoup4>=4.12.0",
     "uv (>=0.8.22,<0.9.0)",
     "playwright (>=1.55.0,<2.0.0)",
