feat(api): refactor autocomply API to use keyword-only retrieval by default
- Simplify model configuration and remove lazy loading
- Implement direct docstore.json parsing for BM25 retrieval
- Add support for optional LLM reranking
- Improve error handling and response formatting
- Remove unused graph-based retrieval code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - ./src/.env:/code/.env
       - ./tests:/code/tests
       - ./pyproject.toml:/code/pyproject.toml
+      - ./storage_autocomply:/code/storage_autocomply
 
   test:
     build:
