--- a/src/.env.example
+++ b/src/.env.example
@@ -102,4 +102,10 @@ TOGETHER_EMBED_MODEL=''
 SENTENCE_CHUNK_OVERLAP=
 SENTENCE_CHUNK_SIZE=
 
-
+# Phoenix (optional)
+# Enable Arize Phoenix UI and LlamaIndex instrumentation (if installed)
+PHOENIX_ENABLED=false
+# PHOENIX_HOST=0.0.0.0
+# PHOENIX_PORT=6006
+# Override the OTEL traces endpoint (default points to Phoenix local)
+# PHOENIX_OTEL_ENDPOINT=http://127.0.0.1:6006/v1/traces
