--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "fastapi-boilerplate"
 version = "0.1.0"
 description = "A fully Async FastAPI boilerplate using SQLAlchemy and Pydantic 2"
 authors = [{ name = "Igor Magalhaes", email = "igor.magalhaes.r@gmail.com" }]
-license = { text = "MIT" }
+license = { file = "LICENSE.md" }
 readme = "README.md"
 requires-python = "~=3.11"
 dependencies = [
